--- a/src/css/components/_footer.scss
+++ b/src/css/components/_footer.scss
@@ -5,7 +5,6 @@
 
 
 footer {
-    @include case(uppercase, 0);
     background-color: $color-text;
     color: $color-text-light;
     font-family: $font-family-gamma;
@@ -71,6 +70,7 @@ footer {
 
 .footer-copyright-anchor,
 .footer-style-guide-anchor {
+    @include case(uppercase);
     margin-left:  $measure-small;
     margin-right: $measure-small;
 
